# finhealth

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.self-hosted.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase1_ingestion.py  0003_statement_error_message.py  0004_timestamp_server_defaults.py  0005_phase2_categories.py  0006_phase2_merchants_transactions_alter.py  0007_phase2_recurring_rules.py  0008_phase2_recurring_rules_unique.py
app/: __init__.py  main.py
app/api/v1/: banks.py  categories.py  dashboard.py  health.py  merchants.py  recurring.py  router.py  statements.py  transactions.py
app/cli/: seed_demo.py  sqlite_ops.py
app/core/: __init__.py  config.py  lifespan.py
app/db/: __init__.py  engine.py  session.py
app/models/: __init__.py  bank.py  base.py  category.py  credit_card.py  merchant.py  mixins.py  recurring_rule.py  statement.py  transaction.py
app/schemas/: __init__.py  dashboard.py  domain.py  health.py
app/services/: __init__.py  dashboard.py  dashboard_selection.py  ingestion.py  merchants.py  recurring_detection.py
app/services/llm/: __init__.py  factory.py  ollama_client.py  opencode_go_client.py  opencode_zen_client.py  prompts.py  protocol.py  schemas.py
app/services/pdf/: __init__.py  amount_parser.py  decryptor.py  extractor.py  password_deriver.py  text_truncator.py  variant_detector.py
app/web/: __init__.py  router.py
app/web/templates/: base.html  dashboard.html  index.html  transactions.html  upload.html
app/web/templates/partials/: dashboard_anomalies.html  dashboard_categories.html  dashboard_merchants.html  dashboard_monthly.html  (+4 more)
openspec/changes/ingestion-tolerate-partial-chunk-failures/: tasks.md  verify-report.md
openspec/changes/phase-2-classification/: apply-progress.md  proposal.md  tasks.md
openspec/changes/phase-2-pr4-merchants-and-aliases/: apply-progress.md  proposal.md
openspec/changes/phase-2-pr5-recurring-detection/: apply-progress.md  design.md  verify-report.md
openspec/changes/phase-2-pr6-docs-e2e/: apply-progress.md  verify-report.md
openspec/changes/phase-3-dashboard/: tasks.md
openspec/changes/phase-3-dashboard-hardening/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/phase-3-dashboard-ui-redesign/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/recurring-info-fixes/: apply-progress.md  tasks.md  verify-report.md
openspec/specs/ingestion-chunk-failure-tolerance/: spec.md
openspec/specs/phase2-categories/: spec.md
openspec/specs/phase2-merchant-aliasing/: spec.md
openspec/specs/phase2-recurring-detection/: spec.md
openspec/specs/phase3-dashboard/: spec.md
scripts/: bench_pdf_extraction.py  pull-ollama-model.sh  verify.sh
tests/: __init__.py  conftest.py  test_alembic.py  test_categories.py  test_config.py  test_dashboard.py  test_dashboard_api.py  test_dashboard_selection.py  test_db.py  test_docker_lifecycle.py  test_documentation.py  test_e2e_phase1.py  test_e2e_phase2.py  test_health.py  test_ingestion.py  test_lifespan.py  test_llm_services.py  test_merchants.py  test_models.py  test_pdf_services.py  test_prompts.py  test_recurring.py  test_seed_demo.py  test_sqlite_ops.py  test_transactions.py  test_web.py  test_web_phase1.py  test_web_phase3.py
(+49 files in other folders)
